[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/piece2portesDroite.png" type="Texture" id=1]
[ext_resource path="res://Assets/piece1porteGDroite.png" type="Texture" id=2]
[ext_resource path="res://Assets/piece1porteDDroite.png" type="Texture" id=3]
[ext_resource path="res://Levels/RoomGen.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "left_door",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "two_door",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "right_door",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 36.825
height = 179.959

[node name="RoomGen" type="Node2D"]
script = ExtResource( 4 )

[node name="RoomSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 8, 8 )
frames = SubResource( 1 )
animation = "two_door"

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="HubloPositions" type="Node2D" parent="."]

[node name="pos1" type="Position2D" parent="HubloPositions"]
position = Vector2( -175, -50 )

[node name="pos2" type="Position2D" parent="HubloPositions"]
position = Vector2( -75, -50 )

[node name="pos3" type="Position2D" parent="HubloPositions"]
position = Vector2( 75, -50 )

[node name="pos4" type="Position2D" parent="HubloPositions"]
position = Vector2( 175, -50 )

[node name="ChandelPositions" type="Node2D" parent="."]

[node name="pos1" type="Position2D" parent="ChandelPositions"]
position = Vector2( -50, -180 )

[node name="pos2" type="Position2D" parent="ChandelPositions"]
position = Vector2( 170, -180 )

[node name="HolePositions" type="Node2D" parent="."]

[node name="pos1" type="Position2D" parent="HolePositions"]
position = Vector2( -120, 155 )

[node name="pos2" type="Position2D" parent="HolePositions"]
position = Vector2( 120, 156.189 )

[node name="BonusPositions" type="Node2D" parent="."]

[node name="pos1" type="Position2D" parent="BonusPositions"]
position = Vector2( -215, 85 )

[node name="pos2" type="Position2D" parent="BonusPositions"]
position = Vector2( 215, 85 )

[node name="DoorsPositions" type="Node2D" parent="."]

[node name="door1" type="Area2D" parent="DoorsPositions"]
position = Vector2( -325.269, 89.8026 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorsPositions/door1"]
position = Vector2( 24.7488, -26.1629 )
shape = SubResource( 2 )

[node name="door2" type="Area2D" parent="DoorsPositions"]
position = Vector2( 271.529, 89.8026 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorsPositions/door2"]
position = Vector2( 24.7488, -26.1629 )
shape = SubResource( 2 )
